--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             </div>
             <div class="row2">
                 <div class="col-lg-12, col-md-12, col-sm12">
-                   <h2 style="color:white">SKILLS</h2>
-                   <p style="color:white">HTML, CSS, SASS, GIT, Responsive Design, User Interface</p>
+                   <h2>SKILLS</h2>
+                   <p>HTML, CSS, SASS, GIT, Responsive Design, User Interface</p>
                 </div>
             </div>
         </div>
