--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="output.css">
 
     <title>My Webpage</title>
 </head>
@@ -85,7 +86,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6, col-md-6, col-sm-6">
-                    <h1>Hi!</h1>
+                    <h2>Hi!</h2>
                     <p><big>M</big>y name is Nicoleta Simion and I am a Greece based freelancer. I am a creative person who loves art, artchitecture but also web design and front end development. For a long time I wished to have a career as a web developer and some time ago I decided to get on with it :) I enjoy building beautiful and functional web apps but I am also looking to learn new skills.</p>
                 </div>
             </div>
