--- a/about.html
+++ b/about.html
@@ -75,7 +75,13 @@
             <div class="row2">
                 <div class="col-lg-12, col-md-12, col-sm12">
                     <h2>SKILLS</h2>
-                    <p>HTML, CSS, SASS, GIT, Responsive Design, User Interface</p>
+                    <ul class="list-group">
+                        <li class="list-group-item">HTML</li>
+                        <li class="list-group-item">CSS</li>
+                        <li class="list-group-item">SCSS/SASS</li>
+                        <li class="list-group-item">RESPONSIVE DESIGN</li>
+                        <li class="list-group-item">USER INTERFACE</li>
+                    </ul>
                 </div>
             </div>
         </div>
