--- a/projects.html
+++ b/projects.html
@@ -64,21 +64,55 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6, col-md-6, col-sm-6">
-                 <h2>PROJECTS</h2>   
+                <div class="col-lg-12, col-md-12, col-sm-12">
+                    <center><h2 style="padding:30px">PROJECTS</h2></center>
                 </div>
-                <div class="col-lg-6, col-md-6, col-sm-6">
-                    <h2>Hi!</h2>
-                    <p><big>M</big>y name is Nicoleta Simion and I am a Greece based freelancer. I am a creative person who loves art, artchitecture but also web design and front end development. For a long time I wished to have a career as a web developer and some time ago I decided to get on with it :) I enjoy building beautiful and functional web apps but I am also looking to learn new skills.</p>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="image5.jpeg" alt="Blue sea" class="project" style="width:100%">
+                        <div class="middle">
+                            <div class="text">PROJECT 1</div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row2">
-                <div class="col-lg-12, col-md-12, col-sm12">
-                    <h2>SKILLS</h2>
-                    <p>HTML, CSS, SASS, GIT, Responsive Design, User Interface</p>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="image5.jpeg" alt="Blue sea" class="project" style="width:100%">
+                        <div class="middle">
+                            <div class="text">PROJECT 2</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="image5.jpeg" alt="Blue sea" class="project" style="width:100%">
+                        <div class="middle">
+                            <div class="text">PROJECT 3</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="image5.jpeg" alt="Blue sea" class="project"style="width:100%">
+                        <div class="middle">
+                            <div class="text">PROJECT 4</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+            <div class="row2">
+                <div class="col-lg-12, col-md-12, col-sm12">
+                    <h2>SKILLS</h2>
+                    <ul class="list-group">
+                        <li class="list-group-item">HTML</li>
+                        <li class="list-group-item">CSS</li>
+                        <li class="list-group-item">SCSS/SASS</li>
+                        <li class="list-group-item">RESPONSIVE DESIGN</li>
+                        <li class="list-group-item">USER INTERFACE</li>
+                    </ul>
+                </div>
+            </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
